--- a/.github/workflows/test_with_mm.yml
+++ b/.github/workflows/test_with_mm.yml
@@ -4,9 +4,9 @@
 
 name: Test with MM
 
-on:
-  pull_request:
-    branches: [ main ]
+on: [pull_request]
+  # pull_request:
+    # branches: [ main ]
     # types:
     #   - closed
 
