--- a/.github/workflows/test_with_mm.yml
+++ b/.github/workflows/test_with_mm.yml
@@ -27,9 +27,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - uses: actions/setup-python@v4
-        with: |
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
       - name: Install PM
         run: |
