--- a/.github/workflows/test_with_mm.yml
+++ b/.github/workflows/test_with_mm.yml
@@ -45,10 +45,10 @@ jobs:
 
     - name: Download MM
       if: steps.cache-mm.outputs.cache-hit != 'true'
-      run: C:\msys64\usr\bin\wget.exe -q https://download.micro-manager.org/nightly/2.0/Windows/MMSetup_64bit_${{ MM_NIGHTLY_BUILD }}.exe
+      run: C:\msys64\usr\bin\wget.exe -q https://download.micro-manager.org/nightly/2.0/Windows/MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe
 
     - name: Install MM
-      run: micro-manager\MMSetup_64bit_${{ MM_NIGHTLY_BUILD }}.exe /SP /VERYSILENT /SUPRESSMSGBOXES /CURRENTUSER
+      run: micro-manager\MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe /SP /VERYSILENT /SUPRESSMSGBOXES /CURRENTUSER
 
     - name: Test
       run: pytest
