--- a/.github/workflows/test_with_mm.yml
+++ b/.github/workflows/test_with_mm.yml
@@ -40,12 +40,14 @@ jobs:
       id: cache-mm
       uses: actions/cache@v3
       with:
-        path: micro-manager
+        path: micro-manager\MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe
         key: ${{ runner.os }}-mm-${MM_NIGHTLY_BUILD}-${{ matrix.python-version }}
 
     - name: Download MM
       if: steps.cache-mm.outputs.cache-hit != 'true'
-      run: curl -O https://download.micro-manager.org/nightly/2.0/Windows/MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe
+      run: |
+        curl -O https://download.micro-manager.org/nightly/2.0/Windows/MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe
+
       shell: bash
 
     - name: Install MM
