fix string formating

--- a/.github/workflows/test_with_mm.yml
+++ b/.github/workflows/test_with_mm.yml
@@ -47,11 +47,11 @@ jobs:
       if: steps.cache-mm.outputs.cache-hit != 'true'
       run: |
         curl -O https://download.micro-manager.org/nightly/2.0/Windows/MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe
-        ls
       shell: bash
 
     - name: Install MM
       run: MMSetup_64bit_${MM_NIGHTLY_BUILD}.exe /SP /VERYSILENT /SUPRESSMSGBOXES /CURRENTUSER
+      shell: bash
 
     - name: Test
       run: pytest
